algotrade-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: algotrade-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: algotrade-release-algotrade-chart-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: algotrade-release-algotrade-chart-backend
            port:
              number: 9999
